# Deshi_LIB

./: .gitignore  LICENSE  README.md  lexer.py  main.py  parser.py  pyproject.toml  test.bh  test_elif.bh  test_func.bh  test_loop.bh  transformer.py
deshilib/: __init__.py  main.py  parser.py  transformer.py
