[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deshilib"
version = "0.1.0"
description = "A Bangla programming language that compiles to Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
  { name = "Wazih Shourov", email = "wazihshourov@gmail.com" }
]
keywords = ["bangla", "bengali", "language", "compiler", "programming", "deshi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Interpreters",
]

[project.scripts]
deshilib = "deshilib.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["deshilib*"]